--- a/_sass/utils/typography.scss
+++ b/_sass/utils/typography.scss
@@ -4,6 +4,7 @@ $base-font-size: 17px;
 $base-font-weight: 300;
 $bold-font-weight: 400;
 $heading-font-weight: 700;
+$secondary-font-size: 16px;
 
 // Spacing
 $base-line-height: 1.4;
